Authors page loading from db
